--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
-    "next-auth": "^4.24.5",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
